# surrogate_data

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  example.ipynb  example.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
surrogate_data/: __init__.py  __main__.py  config.py  data.py  gauss.py  sample.py  surrogate.py  variogram.html  variogram.pyx  variogram_native.py
tests/: __init__.py  test_data.py  test_gauss.py  test_surrogate.py
