[tool.poetry]
name = "surrogate-data"
version = "0.1.0"
description = "Generate null distribution with preserved autocorrelation."
authors = ["Daniel Haenelt <daniel.haenelt@gmail.com>"]
license = "GPLv3"
readme = "README.md"
include = ["surrogate_data/variogram.cpython-*.so"]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.1.3"
scipy = "^1.14.1"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
joblib = "^1.4.2"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-sugar = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true


[tool.isort]
profile = "black"
